--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
           <title>Document</title>
 </head>
 <body>
-          
+          <div class="container">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptatibus magni est veritatis? Nulla quasi nemo sint porro dolor corrupti.</p>
+          </div>
 </body>
 </html>
