--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Santiago Tovar</title>
-          <link rel="shortcut icon" href="/img/minecraft-logo.png" type="image/x-icon">
+          <link rel="shortcut icon" href="/img/logo.svg" type="image/x-icon">
           <link rel="stylesheet" href="css/style.css">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -28,6 +28,7 @@
                                                   <li><a>About me</a></li>
                                                   <li><a>Proyects</a></li>
                                                   <li><a>Blog</a></li>
+                                                  <li><a href="/lab.html"> Lab</a></li>
                                         </ul>
                               </nav>
 
@@ -35,16 +36,21 @@
 
 
                     <section class="about-me-box">
-                              <div class="organizer">
+                              <div class="container">
                                         <div class="text">
-                                                  <p>I'm a software engineering student based in Bogotá
+                                                  <p style="padding: 2vh 0 2vh 0;">I'm a software engineering student
+                                                            based in Bogotá
                                                             with experience in
                                                             software
                                                             development and web design.</p>
+
+                                                  <p style="padding: 5vh 0 2vh 0;">I've work on web development. and
+                                                            data structure.</p>
                                         </div>
 
-
-                                        <img src="/img/portrait-picture.png" alt="" class="portrait-picture">
+                                        <div class="image">
+                                                  <img src="/img/portrait-picture.png" alt="" class="portrait-picture">
+                                        </div>
 
                               </div>
                               <div class="skills-icons-box">
