projects section added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Santiago Tovar</title>
-          <link rel="shortcut icon" href="/img/logo.svg" type="image/x-icon">
+          <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon">
           <link rel="stylesheet" href="css/style.css">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -22,13 +22,13 @@
                                                   <i class="fas fa-bars"></i>
                                         </label>
 
-                                        <img src="/img/logo.svg" class="logo" alt="logo">
+                                        <img src="./img/logo.svg" class="logo" alt="logo">
 
                                         <ul>
                                                   <li><a>About me</a></li>
                                                   <li><a>Proyects</a></li>
                                                   <li><a>Blog</a></li>
-                                                  <li><a href="/lab.html"> Lab</a></li>
+                                                  <li><a href="./lab.html"> Lab</a></li>
                                         </ul>
                               </nav>
 
@@ -49,14 +49,14 @@
                                         </div>
 
                                         <div class="image">
-                                                  <img src="/img/portrait-picture.png" alt="" class="portrait-picture">
+                                                  <img src="./img/portrait-picture.png" alt="" class="portrait-picture">
                                         </div>
 
                               </div>
                               <div class="skills-icons-box">
-                                        <img src="/img/python-icon.svg" alt="" class="skill-icon">
-                                        <img src="/img/js-icon.svg" alt="" class="skill-icon">
-                                        <img src="/img/skills-icon.svg" alt="" class="skill-icon">
+                                        <img src="./img/python-icon.svg" alt="" class="skill-icon">
+                                        <img src="./img/js-icon.svg" alt="" class="skill-icon">
+                                        <img src="./img/skills-icon.svg" alt="" class="skill-icon">
                               </div>
 
 
@@ -66,38 +66,53 @@
 
           </section>
 
-          <section class="proyects">
-                    <h2 class="tittle">Some proyects</h2>
-                    <section class="proyects-container">
-                              <section class="proyect">
-                                        <img src="/img/table.jpg" class="" alt="proyect image">
-                                        <h3>Proyect 1</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi animi rem
-                                                  blanditiis asperiores delectus
-                                                  autem, laudantium </p>
-                                        <button class="proyect-button">Git</button>
-                                        <button class="proyect-button">Visit</button>
-                              </section>
-                              <section class="proyect">
-                                        <img src="/img/table.jpg" class="" alt="proyect image">
-                                        <h3>Proyect 2</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi animi rem
-                                                  blanditiis asperiores delectus
-                                                  autem, laudantium </p>
-                                        <button class="proyect-button">Git</button>
-                                        <button class="proyect-button">Visit</button>
-                              </section>
-                              <section class="proyect">
-                                        <img src="/img/table.jpg" class="" alt="proyect image">
-                                        <h3>Proyect 3</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi animi rem
-                                                  blanditiis asperiores delectus
-                                                  autem, laudantium </p>
-                                        <button class="proyect-button">Git</button>
-                                        <button class="proyect-button">Visit</button>
-                              </section>
-                    </section>
-          </section>
+        <div id="projects">
+            <ul class="slider">
+                <li id="slide1">
+                    <img src="./img/table.jpg" alt="">
+                    <div>
+                        <section class="info">
+                            <h3>CryptoUnal</h3>
+                            <p>Crypto wallet app with account managemnt and transaction tools.</p>
+                        </section>
+                        <button>Click</button>
+                    </div>
+                </li>
+                <li id="slide2">
+                    <img src="./img/table.jpg" alt="">
+                    <div>
+                        <section class="info">
+                            <h3>Project 2</h3>
+                            <p>Text of the project</p>
+                        </section>
+                        <button>Click</button>
+                    </div>
+                </li>
+                <li id="slide3">
+                    <img src="./img/table.jpg" alt="">
+                    <div>
+                        <section class="info">
+                            <h3>Project 3</h3>
+                            <p>Text of the project</p>
+                        </section>
+                        <button>Click</button>
+                    </div>
+                </li>
+            </ul>
+        
+            <ul class="menu">
+                <li>
+                    <a href="#slide1">1</a>
+                </li>
+                <li>
+                    <a href="#slide2">2</a>
+                </li>
+                <li>
+                    <a href="#slide3">3</a>
+                </li>
+            </ul>
+        
+        </div>
 
           <section class="blog">
                     <h1 class="tittle">Blog</h1>
