new Next.js version

--- a/old/index.html
+++ b/old/index.html
@@ -65,34 +65,35 @@
     </section>
 
     <div id="projects">
-        <ul class="slider">
+        <ul class="slider" onclick="window.location.href='https://github.com/abramcho/cryptoUnal'">
             <li id="slide1">
-                <img src="./img/table.jpg" alt="">
+                <img style="background-color: #849994;" alt="">
                 <div>
                     <section class="info">
                         <h3>CryptoUnal</h3>
                         <p>Crypto wallet app with account managemnt and transaction tools.</p>
                     </section>
-                    <button>Click</button>
-                </div>
+                    <button>Click</button> 
+            </div>
             </li>
             <li id="slide2">
-                <img src="./img/table.jpg" alt="">
+                <img style="background-color: #849994;" alt="">
                 <div>
                     <section class="info">
-                        <h3>Project 2</h3>
-                        <p>Text of the project</p>
+                        <h3>QuindioTravel</h3>
+                        <p>Search for local businesses all around Quindio</p>
                     </section>
-                    <button>Click</button>
+                    <button href="https://github.com/abramcho/cryptoUnal">Click</button>
                 </div>
             </li>
             <li id="slide3">
-                <img src="./img/table.jpg" alt="">
+                <img style="background-color: #849994;" alt="">
                 <div>
                     <section class="info">
-                        <h3>Project 3</h3>
-                        <p>Text of the project</p>
+                        <h3>SistemasOP</h3>
+                        <p>Linux module that prints the number of iterations on the internal clock of the machine</p>
                     </section>
+                    
                     <button>Click</button>
                 </div>
             </li>
